Update Product FY'23 talent assessment details

--- a/sites/handbook/source/handbook/product/product-processes/index.html.md.erb
+++ b/sites/handbook/source/handbook/product/product-processes/index.html.md.erb
@@ -2862,39 +2862,50 @@ Company-wide guidelines on the Talent Assessment can be found [here](https://abo
 
 #### Calibration Strategy 
 
-We will be calibrating Performance, Growth, and anyone identified as Key Talent for calibration this cycle. Formal calibration will take place at the GPM+ levels. 
+We will be reviewing outliers for Performance/Growth Potential and anyone identified as Key Talent for calibration this cycle. Formal calibration will take place with the Director+ levels. The thought process around who qualifies as an "outlier" for Performance and Growth Potential [is outlined here](/handbook/people-group/talent-assessment/#who-do-i-calibrate). 
 
-We will structure calibration cadence during the live sessions by level/[job grade](/handbook/total-rewards/compensation/compensation-calculator/#gitlab-job-grades). For example, in our Director+ session we will first discuss job grade 6 (I.E. Analyst), from there, we'll discuss job grade 7 (I.E. Senior Analyst), from there job grade 8 (Product Manager, etc.
+Calibration and assessment are two different steps in the process. The assessment phase is the process of assessing each team member to determine their Performance and Growth, whereas the calibration phase (occurring after initial assessments are made) is when management calibrates across the stage/org/level/etc. to discuss and align on assessments. Every team member should be assessed and have supporting points to justify those assessments - but to make calibration sessions more focused and scalable, we focus on [outliers](/handbook/people-group/talent-assessment/#who-do-i-calibrate). 
 
-The agenda documents aligned with each calibration session have been structure to align to this system. 
+For Product specifically, we will calibrate:
 
-For each level, we will work our way from the outside edges in, so [Box 1/9, 2/3, 7/8](/handbook/people-group/talent-assessment/#the-performancegrowth-matrix), and so forth, with the goal of calibrating on as many people as possible.
+1. Anyone in [Boxes 1 or 9](/handbook/people-group/talent-assessment/#the-performancegrowth-matrix) aligned with [company-wide guidelines](/handbook/people-group/talent-assessment/#who-do-i-calibrate). 
+1. Anyone assessed as `Exceeding` for Performance or Growth Potential
+1. Anyone hired in the last 3 months assessed as `Performing` or `Exceeding` for Performance aligned with [eligibility guidance](https://about.gitlab.com/handbook/people-group/talent-assessment/#eligibility)
+1. Anyone identified as Key Talent
+
+It's important to note that while these will be our focus areas for calibration sessions, leaders should feel free to raise any team member's assessment up for discussions if they have any questions or concerns. Calibrating outliers is not a limitation, but rather a structural adjustment to ensure this process is scalable and focused. 
+
+_Note: If individual teams want to calibrate every individual, they have the ability to do this/organize/structure separately, but the due dates remain in place across the division to ensure we have enough time to review and calibrate at the various levels in the company._
 
 #### Pre-Calibration Prep Work
 
-In addition to the [calibration session pre work](https://about.gitlab.com/handbook/people-group/talent-assessment/#calibration-session-guidelines) on the Talent Assessment page, we ask that you review the following guidelines:
+In addition to the [calibration session pre work](/handbook/people-group/talent-assessment/#calibration-session-pre-work) on the Talent Assessment page, we ask that you complete the following:
 
-1. Performance and Growth assessments need to be completed and added to the session agenda doc at least 3 business days before the live calibration session. Each individual should have ~3 supporting points for the assessment under each pillar (Performance and Growth) added to the agenda doc to help support the “why” behind the assessment. 
+1. Directors should conduct sub-department/section level calibration sessions ahead of the division-wide Product calibration sessions. In addition to calibrating on initial assessments, Directors should review how their respective teams assessments compare with the [expected distribution](https://about.gitlab.com/handbook/people-group/talent-assessment/#expected-distribution-performancegrowth-potential-company-wide) ahead of the department-wide calibration session. If there are slight deviations at the sub-department/section level from the expected distribution that is merited, the Director should provide a rationale and be prepared to discuss it during division-level calibration. The expectation is that the division overall falls within the expected distribution.
 
-1. Key Talent assessment also needs to be completed and added to the session agenda doc at least 3 business days before the live calibration session. If an individual is indicated as key talent, an explanation should be added to indicate how this individual qualifies as key talent against our [key talent definition](/handbook/people-group/talent-assessment/#key-talent). Reminder that the bar for key talent is set high, and that key talent makes up roughtly ~10% of the entire population. **In Product, we will be assessing Key Talent from the Director level and above [aligned with guidelines](/handbook/people-group/talent-assessment/#process-to-determine-key-talent)**, meaning that while *everyone in the organization is eligible to be identified as Key Talent*, the Director level will be assessing and making these initial nominations. The rationale behind this decision is that is important to have a holistic view of all team members when determining who meets the key talent criteria, which is why we require a certain scope when assessing key talent in the organization. 
+1. Performance and Growth Potential notes need to be added to the [session agenda doc](https://docs.google.com/document/d/1zrlZSfdNXpSZ09uvDM71KxH42RWBJxa6U1QTCTw05iI/edit#) for each team member at least 3 business days before the synchronous calibration session. 
 
-1. Every session attendee should review the Performance/Growth assessments and Key Talent overviews asynchronously ahead of the session to be prepared for live discussion/calibration. 
+1. Managers should include 2-3 supporting points for each team member for the assessment under each section in the [agenda doc notes](https://docs.google.com/document/d/1zrlZSfdNXpSZ09uvDM71KxH42RWBJxa6U1QTCTw05iI/edit#) to help support the “why” behind the assessment. _Note: The overviews in the agenda document for calibration are meant to provide enough of an overview so peers have an understanding of the "why", while simultaneously not overwhelming with information and decreasing efficiency of the session. Please limit to 2-3 supporting points per team member._
 
-**Important**: Be sure to reference our [Resources](https://about.gitlab.com/handbook/people-group/talent-assessment/#resources) for different templates and material to help with the assessment and calibration processes. In particular, we ask that all managers leverage the [Talent Assessment Calibration Spreadsheet template provided](https://about.gitlab.com/handbook/people-group/talent-assessment/#resources) to ensure a consistent format for Performance/Growth assessment calibration and finalizing assessments so we have a format that is compatible with uploading directly to BambooHR to minimize error. Note that this sheet also includes a couple of columns for Key Talent assessment and nominations. Given that not all levels of management assess Key Talent, this will not apply for all people managers. If Key Talent is not assessed at your level, feel free to simply remove these columns. 
+1. Key Talent assessment need to be completed and added to the session agenda doc at least 3 business days before the live calibration session. 
+
+  - If an individual is indicated as key talent, an explanation should be added to indicate how this individual qualifies as key talent against our [key talent definition](/handbook/people-group/talent-assessment/#key-talent). Reminder that the bar for key talent is set high, and that key talent makes up roughly ~10% of the entire population. In Product, we will be assessing Key Talent from the Director level and above [aligned with guidelines](/handbook/people-group/talent-assessment/#process-to-determine-key-talent), meaning that while *everyone in the organization is eligible to be identified as Key Talent*, Directors+ will be assessing and making these initial nominations. The rationale behind this decision is that is important to have a holistic view of all team members when determining who meets the key talent criteria, which is why we require a certain scope when assessing key talent in the organization. 
+
+1. Every session attendee should review the Performance/Growth Potential assessments and Key Talent overviews for outliers asynchronously ahead of the session to be prepared for live discussion/calibration. 
 
 #### Calibration Session Timeline
 
-Calibration session attendees will be organized by leadership layer (GPMs, Directors/Senior Directors, VP, CProdO) within the Product division, and within those sessions we will calibrate team members by level. 
+Calibration session attendees will be organized by leadership layer within the Product division.
 
-Below is an overview of our calibration structure and timeline for the FY'22 Q4 Talent Assessment cycle. 
+Below is an overview of our calibration structure and timeline for the FY'23 Q4 Talent Assessment cycle. At a high level, the week of November 7th is the week that section and sub-department leaders should calibrate their respective organizations ahead of the commencement of the Product division wide calibration sessions, which will begin the week of November 14th. 
 
 | Session Number | Attendees | Calibration Level Focus | Session Date | Duration |
 | --------------- | ----------------- |----------------- |----------------- |----------------- |
-| Session 1 _(optional)_  | Directors + GPMs | ICs reporting into GPMs | TBD by Directors for their sub-departments (this can be done synchronously or asynchronously | Director discretion depending on group size/format |
-| Session 2  | People Managers in the Product Management department + PBP | ICs reporting into GPMs | Two sessions: 2021-11-08 and 2021-11-09 | 1 hour/session (2 hours total) |
-| Session 3 | Directors+ in the Product division + PBP | ICs, GPMs, Managers | 2021-11-15 | 2 hours |
-| Session 4 | VP, CProdO, PBP | Directors and Senior Directors in the Product Management department | 2021-11-22 | 1 hour |
-| Session 5 | CProdO and PBP | All of the CProdO's direct reports + finalize division-wide | 2021-11-23 | 1 hour | 
+| Session 1  | Section/Sub-Department (Managers, Sr Mgrs, GMP, and Director/Sr Director; VP and PBP optional) | IC | Week of November 7-11 | Leader discretion |
+| Session 2  | Directors+ in the Product division + PBP  | Senior Manager/Manager/GMP/IC  | Week of November 14 | 1.5 hours |
+| Session 3  | Directors+ in the Product division + PBP  | Senior Manager/Manager/GMP/IC  | Week of November 14 | 1.5 hours |
+| Session 4 | VP, Product; VP, UX; PBP | Product division Directors | Week of November 14 | 1.5 hours |
+| Session 5 | VP, Product and PBP | All of the VP, Product's direct reports + finalize division-wide | November 28 | 1.5 hours | 
 
 ### Span of Control Guidance
 
