Add AH to QE EE team page

--- a/sites/handbook/source/handbook/engineering/quality/quality-engineering/enablement-saas-platforms-qe-team/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/quality/quality-engineering/enablement-saas-platforms-qe-team/index.html.md.erb
@@ -42,7 +42,7 @@ Quality Engineering Manager: Kassandra Svoboda
 | 1    	| [SaaS Platforms]  | [Delivery]                     | TBH                                                                     |
 | 2    	| [SaaS Platforms]  | [Scalability]                  | TBH                                                                     |
 | 3    	| [SaaS Platforms]  | [GitLab Dedicated]             | TBH                                                                     |
-| 4    	| [SaaS Platforms]  | [US Public Sector Services]    | TBH                                                                     |
+| 4    	| [SaaS Platforms]  | [US Public Sector Services]    | Andy Hohenner                                                                     |
 
 ## OKRs 
 
