Update handbook pages for Carrie Kroutil

--- a/sites/handbook/source/handbook/engineering/development/ops/package/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/ops/package/index.html.md.erb
@@ -32,7 +32,7 @@ The Package stage is made up of two groups:
 
 ### Package:Package Registry
 
-<%= direct_team(manager_slug: 'michelletorres') %>
+<%= direct_team(manager_slug: 'ckroutil') %>
 
 ## 📈 Measuring results
 
