--- a/sites/handbook/source/handbook/engineering/development/ops/package/package-registry/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/ops/package/package-registry/index.html.md.erb
@@ -18,10 +18,10 @@ stage](/handbook/engineering/development/ops/package/), which integrates with [G
 
 The following people are permanent members of the Package Registry Group:
 
-<%= direct_team(manager_slug: 'michelletorres') %>
+<%= direct_team(manager_slug: 'ckroutil') %>
 
 ### Stable Counterparts
 
 The following members of other functional teams are our stable counterparts:
 
-<%= stable_counterparts(role_regexp: /[,&] Package/, manager_slug: 'michelletorres') %>
+<%= stable_counterparts(role_regexp: /[,&] Package/, manager_slug: 'ckroutil') %>
