--- a/sites/uncategorized/source/blog/blog-posts/2022-10-20-gitlab-com-artifacts-cdn-change.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-10-20-gitlab-com-artifacts-cdn-change.html.md.erb
@@ -30,7 +30,7 @@ Platform. These will continue to be redirected to Cloud Storage.
 
 ## When will this change occur?
 
-We expect to start the transition on October 30, 2022. This will be a
+We expect to start the transition around the end of October 2022. This will be a
 gradual transition using a percentage-based rollout, so we anticipate that you will see
 an increasing number of your requests redirected to Google Cloud
 CDN instead of Google Cloud Storage until all of the requests are served by the
@@ -44,8 +44,11 @@ plan.
 ## How does this change impact you?
 
 Since GitLab CI runners and certain clients automatically handle URL
-redirections already, we do not anticipate that many users will see an impact.
+redirections already, we expect that downloads for CI artifacts should
+continue to work without any action. If a runner cannot download from
+the CDN host, it will retry without the CDN and download the artifact
+directly through GitLab.com.
 
 However, if you have a firewall that only allows
 `storage.googleapis.com`, you will need to add
-`cdn.artifacts.gitlab-static.net` to the allow list as well.
+`cdn.artifacts.gitlab-static.net` to the allow list.
