Amend calibrations for new hire

--- a/sites/handbook/source/handbook/engineering/development/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/index.html.md.erb
@@ -149,7 +149,7 @@ For Development specifically, we will calibrate:
 
 1. Anyone in [Boxes 1 or 9](/handbook/people-group/talent-assessment/#the-performancegrowth-matrix) aligned with [company-wide guidelines](/handbook/people-group/talent-assessment/#who-do-i-calibrate). 
 1. Anyone assessed as `Exceeding` for Performance
-1. Anyone hired in the last 3 months assessed as `Performing` or `Exceeding` for Performance aligned with [eligibility guidance](https://about.gitlab.com/handbook/people-group/talent-assessment/#eligibility)
+1. Anyone hired in the last 3 months assessed as `Performing` or `Exceeding` for Performance aligned with [eligibility guidance](https://about.gitlab.com/handbook/people-group/talent-assessment/#eligibility) or `Growing` or `Exceeding` for Growth Potential
 1. Anyone identified as Key Talent
 
 It's important to note that while these will be our focus areas for calibration sessions, managers should feel free to raise any team member's assessment up for discussions if they have any questions or concerns. Calibrating outliers is not a limitation, but rather a structural adjustment to ensure this process is scalable and focused. 
