Added health status callout to weekly update

--- a/sites/handbook/source/handbook/engineering/development/fulfillment/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/fulfillment/index.html.md.erb
@@ -375,6 +375,8 @@ Please be sure to update the workflow labels of your issue to one of the followi
 1. Are the related issues up to date? Please link any missing issues in the epic that could be linked to this issue
     - [ ] Yes
     - [ ] No
+    
+/health_status [on_track, needs_attention, at_risk]
 ```
 
 We do this to encourage our team to be more async in collaboration and to allow the community and other team members to know the progress of issues that we are actively working on.
