Add requirement for clear desk and clear screen for ISO

--- a/sites/handbook/source/handbook/security/index.html.md.erb
+++ b/sites/handbook/source/handbook/security/index.html.md.erb
@@ -182,6 +182,9 @@ Sometimes a team member needs to test a particular scenario that requires bypass
 * If your testing is frequent, configure the firewall to only allow the ports needed for your testing, and stay on an [isolated network](network-isolation/index.html) or use a [personal VPN](/handbook/tools-and-tips/personal-vpn/).
 * Contact the Security department in the `security` Slack channel if you have questions about this.
 
+### Clean Desk/Clear Screen:
+All GitLab team members must keep their computers locked when not actively being used and any sensitive GitLab information must be stored and secured when not in use when working from a shared or public space.
+
 ### WiFi configuration
 
 Refer to this [guide](network-isolation/index.html) for setting up a dedicated WiFi so that your work notebook is isolated from other personal devices in your home network.
