Move DORA Metrics Category to Plan

--- a/source/direction/plan/dora_metrics/index.html.md.erb
+++ b/source/direction/plan/dora_metrics/index.html.md.erb
@@ -2,7 +2,7 @@
 layout: markdown_page
 title: "Category Direction - DORA Metrics"
 description: "GitLab's out-of-the-box DORA metrics help software leaders to track development teams' improvements, understand patterns, trends and compare performance between groups and projects."
-canonical_path: "/direction/manage/dora_metrics/"
+canonical_path: "/direction/plan/dora_metrics/"
 ---
 
 - TOC
@@ -10,7 +10,7 @@ canonical_path: "/direction/manage/dora_metrics/"
 
 | Category | **DORA Metrics** |
 | --- | --- |
-| Stage | [Manage](https://about.gitlab.com/handbook/product/categories/#manage-stage) |
+| Stage | [Plan](https://about.gitlab.com/handbook/product/categories/#plan-stage) |
 | Group | [Optimize](https://about.gitlab.com/handbook/product/categories/#optimize-group) |
 | Maturity | [Minimal](/direction/maturity/) |
 | Content Last Reviewed | `2022-09-18` |
@@ -23,7 +23,7 @@ Thanks for visiting the DORA Metrics direction page. This page is actively maint
 
 ### Overview
 
-<%= partial("direction/manage/dora_metrics/templates/overview") %>
+<%= partial("direction/plan/dora_metrics/templates/overview") %>
 
 ### Vision
 
@@ -52,7 +52,7 @@ For DORA Metrics, we are targeting the following personas (in priority order):
 
 ### What's next and why
 
-<%= partial("direction/manage/dora_metrics/templates/next") %>
+<%= partial("direction/plan/dora_metrics/templates/next") %>
 
 ### Goals
 
