Plan:Optimize Direction Updates - October

--- a/source/direction/plan/dora_metrics/index.html.md.erb
+++ b/source/direction/plan/dora_metrics/index.html.md.erb
@@ -13,7 +13,7 @@ canonical_path: "/direction/plan/dora_metrics/"
 | Stage | [Plan](https://about.gitlab.com/handbook/product/categories/#plan-stage) |
 | Group | [Optimize](https://about.gitlab.com/handbook/product/categories/#optimize-group) |
 | Maturity | [Minimal](/direction/maturity/) |
-| Content Last Reviewed | `2022-09-18` |
+| Content Last Reviewed | `2022-10-23` |
 
 ### Contributing
 Thanks for visiting the DORA Metrics direction page. This page is actively maintained by the [Optimize group](https://about.gitlab.com/handbook/product/categories/#optimize-group). You can contribute or provide feedback by:
@@ -40,6 +40,7 @@ For DORA Metrics, we are targeting the following personas (in priority order):
 
 ### Recent accomplishments
 
+- Added a pre-defined [DORA report to the default insights configuration file](https://about.gitlab.com/releases/2022/10/22/gitlab-15-5-released/#improve-devops-efficiency-with-the-pre-defined-dora-comparison-report).
 - New [Custom DORA reporting](https://about.gitlab.com/releases/2022/08/22/gitlab-15-3-released/#dora-custom-reporting-for-data-driven-software-development-improvements) for tracking metrics improvements, understand patterns in metrics trends, and compare performance between groups and projects
 - New [Change failure rate chart](https://about.gitlab.com/releases/2022/07/22/gitlab-15-2-released/#change-failure-rate-chart-for-visualizing-software-stability) for visualizing software stability. This chart shows the percentage of deployments that cause an incident in a production environment. GitLab measures the change failure rate as the number of incidents divided by the number of deployments to a production environment during a given time period.
 - New Time to restore service chart - we added a new trend chart for the [DORA Time to restore service](https://docs.gitlab.com/ee/user/analytics/ci_cd_analytics.html#view-time-to-restore-service-chart) metric to provide insights into software stability and reliability trends. This new chart shows information about how long it takes an organization to recover from a failure in production.
@@ -60,13 +61,11 @@ In order to reach our vision we will focus on:
 
 #### Near-Term Goals 
 
-- Continue progress on [DORA custom reports and dashboards](https://gitlab.com/groups/gitlab-org/-/epics/8335).
+- [Extend DORA 4 metrics APIs and analytics capabilities](https://gitlab.com/groups/gitlab-org/-/epics/9070)
 - Extend [DORA integrations](https://gitlab.com/groups/gitlab-org/-/epics/8334).
 
 #### Mid-Term Goals
 
-- [Consolidations and Centralization GitLab's analytics pages](https://gitlab.com/groups/gitlab-org/-/epics/8305).
-- Continue progress on DORA [integrations](https://gitlab.com/groups/gitlab-org/-/epics/8334).
 - Develop and publish best practices for [DORA](https://gitlab.com/groups/gitlab-org/-/epics/4788).
 
 
