--- a/source/direction/plan/dora_metrics/templates/_overview.erb
+++ b/source/direction/plan/dora_metrics/templates/_overview.erb
@@ -8,10 +8,7 @@ Visibility of work in the value stream with DORA Metrics - measuring the velocit
 
 These four "DORA" metrics are:
 
-Deployment Frequency
-Lead Time
-Mean Time to Recover
-Change Failure Rate
+**Deployment Frequency**, **Lead Time**, **Mean Time to Recover** and **Change Failure Rate**.
 
 DORA metrics are available in GitLab Group-level [value stream analytics (VSA)](Group-level value stream analytics (VSA)), [Insights reports](https://docs.gitlab.com/ee/user/project/insights/#dora-query-parameters) and in the [CI/CD analytics reports](https://docs.gitlab.com/ee/user/analytics/ci_cd_analytics.html#view-deployment-frequency-chart). APIs are also available for all four DORA metrics. 
 
