--- a/source/direction/plan/value_stream_management/index.html.md.erb
+++ b/source/direction/plan/value_stream_management/index.html.md.erb
@@ -13,7 +13,7 @@ canonical_path: "/direction/manage/value_stream_management/"
 | Stage | [Plan](https://about.gitlab.com/handbook/product/categories/#plan-stage) |
 | Group | [Optimize](https://about.gitlab.com/handbook/product/categories/#optimize-group) |
 | Maturity | [Minimal](/direction/maturity/) |
-| Content Last Reviewed | `2022-08-29` |
+| Content Last Reviewed | `2022-10-23` |
 
 ### Contributing
 Thanks for visiting the Value Stream Management direction page. This page is actively maintained by the [Optimize group](https://about.gitlab.com/handbook/product/categories/#optimize-group). You can contribute or provide feedback by:
@@ -61,10 +61,10 @@ In order to reach our vision we will focus on:
 
 #### Near-Term Goals 
 
+- Add a new [Value Streams Dashboard for Executive](https://gitlab.com/groups/gitlab-org/-/epics/8335).
 - [Enhanced and improved Value Stream Analytics (VSA) usability](https://gitlab.com/groups/gitlab-org/-/epics/7961) for deeper actionable insights into  the entire work process performance. 
 - Continue progress on [custom reports and dashboards](https://gitlab.com/groups/gitlab-org/-/epics/8335).
 - Extend [VSA integrations](https://gitlab.com/groups/gitlab-org/-/epics/8369).
-- Extend [DORA integrations](https://gitlab.com/groups/gitlab-org/-/epics/8334).
 
 #### Mid-Term Goals
 
