--- a/source/direction/plan/value_stream_management/templates/_overview.erb
+++ b/source/direction/plan/value_stream_management/templates/_overview.erb
@@ -9,3 +9,5 @@ Value Stream Management helps organizations understand and optimize the impact o
 To achieve this, users can map [Value Streams](https://docs.gitlab.com/ee/user/group/value_stream_analytics/) and finds bottlenecks in their process. Value Stream Analytics provide a high-level overview of end-to-end cycle and stage times and is the  starting point for drilling down into each stage of a value stream to identify opportunities for improvements.
 
 In addition to the [custom value streams](https://docs.gitlab.com/ee/user/group/value_stream_analytics/#create-a-value-stream) that can be built in VSA, the [Optimize group](https://about.gitlab.com/handbook/product/categories/#optimize-group) maintains [GitLab Insights](https://docs.gitlab.com/ee/user/group/insights/), which allows users to create custom reports to show the type, velocity, and quality of work.
+
+A new [DORA Metrics category](https://about.gitlab.com/direction/plan/dora_metrics/) was split from Value Stream Management  align our messaging with the market. The DORA Metrics will continue to be the core measurements for value stream performance, and will remain embedded in Value Stream Analytics flow. 
