--- a/sites/uncategorized/source/blog/blog-posts/2022-10-24-why-the-market-is-moving-to-a-platform-approach-to-devsecops.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-10-24-why-the-market-is-moving-to-a-platform-approach-to-devsecops.html.md.erb
@@ -7,38 +7,30 @@ description: A single DevOps platform improves ROI, the developer experience,
 image_title: /images/blogimages/cobolshortage.jpg
 twitter_text: "GitLab's platform has the features and benefits organizations
   need to endure a recession and beyond. Download Forrester Consulting's "Total
-  Economic Impact of GitLab's Ultimate Plan" study today to learn more. "
+  Economic Impact of GitLab's Ultimate Plan" study today to learn more."
 ---
 The market is moving to a platform approach to [DevSecOps](/topics/devsecops/). What had previously been an approach that let different engineering teams adopt their own tools for different stages of the software development lifecycle – what we call “DIY DevOps” – is being replaced by an approach that leverages a single application.
 
-Why is this happening? First, IT managers are coming to grips with the inefficiencies and cost of toolchain sprawl. Second, executives are relying on digital transformation to solve significant business-level problems: improving developer onboarding and productivity, building high-performing teams, securing the software supply chain, and creating a secure on-ramp to the public cloud. Finally, there’s the impact of [the potential recession](https://www.worldbank.org/en/news/press-release/2022/09/15/risk-of-global-recession-in-2023-rises-amid-simultaneous-rate-hikes), which has accelerated the above trends
+Why is this happening? First, IT managers are coming to grips with the inefficiencies and cost of toolchain sprawl. Second, executives are relying on digital transformation to solve significant business-level problems: improving developer onboarding and productivity, building high-performing teams, securing the software supply chain, and creating a secure on-ramp to the public cloud. Finally, there’s the impact of [the potential recession](https://www.worldbank.org/en/news/press-release/2022/09/15/risk-of-global-recession-in-2023-rises-amid-simultaneous-rate-hikes), which has accelerated the above trends.
 
 We recently commissioned a [Forrester Consulting “Total Economic Impact™ of GitLab’s Ultimate Plan” study](https://page.gitlab.com/resources-study-forrester-tei-gitlab-ultimate.html) to better understand how companies save on costs and achieve business and technology goals with GitLab. We focused on our Ultimate tier, which is the fastest growing part of the business. We believe the results align with the business requirements needed to endure economic headwinds and position companies for success: strong return on technology investment, cost savings through technical tool consolidation, a faster pace of application releases to acquire and retain customers, greater development and delivery efficiency, increased and simplified security, and a rapid payback period. 
 
 GitLab’s DevOps platform enables source code management, continuous integration/continuous delivery, advanced security capabilities, and more in a single application. The Forrester study found that combination led to:
 
 * Three-year ROI of 427%
-
 * 12x increase in the number of annual releases for revenue generation applications
-
 * 87% improvement in development and delivery efficiency time
-
-* Less than 6-month payback period
+* Less than six-month payback period
 
 ## Understanding DevOps pain points
 
 To realize the benefits of a single DevOps platform, organizations have to assess their pain points. Here are some common development lifecycle obstacles that affect organizations of all sizes:
 
 * Complex toolchains and processes
-
 * Inefficient development environments
-
 * Lack of security skills
-
 * Rushed development cycles
-
 * No single source of truth or single code repository
-
 * Poor software testing practices
 
 All of these pain points can impede an organization’s ability to manage through a recession and recovery. 
@@ -51,13 +43,13 @@ Here are five of those benefits of the GitLab Ultimate Plan:
 
 ### Vulnerability management
 
-As GitLab’s 2022 Global DevSecOps Survey found, [security is top of mind](http://about.gitlab.com/blog/2022/08/23/gitlabs-2022-global-devsecops-survey-security-is-the-top-concern-investment/) for all DevOps organizations. Yet security at scale can be challenging, especially finding and hiring professionals with the right skills.
+As GitLab’s 2022 Global DevSecOps Survey found, [security is top of mind](/blog/2022/08/23/gitlabs-2022-global-devsecops-survey-security-is-the-top-concern-investment/) for all DevOps organizations. Yet security at scale can be challenging, especially finding and hiring professionals with the right skills.
 
-A benefit of GitLab Ultimate, according to the Forrester study, is greater efficiency in managing vulnerabilities. The DevOps platform [integrates and automates vulnerability management](http://about.gitlab.com/direction/govern/threat_insights/vulnerability_management/) within the development lifecycle. Issues can be identified, logged, triaged, tracked, and remediated – all in the same DevOps application. Developers can address vulnerabilities in real time, avoiding release delays or software defects and bugs. According to Forrester, the composite organization realized savings of “hours a week because developers have access to better context about the vulnerabilities. This in turn means less back and forth between development and QA/security on an issue.”
+A benefit of GitLab Ultimate, according to the Forrester study, is greater efficiency in managing vulnerabilities. The DevOps platform [integrates and automates vulnerability management](/direction/govern/threat_insights/vulnerability_management/) within the development lifecycle. Issues can be identified, logged, triaged, tracked, and remediated – all in the same DevOps application. Developers can address vulnerabilities in real time, avoiding release delays or software defects and bugs. According to Forrester, the composite organization realized savings of “hours a week because developers have access to better context about the vulnerabilities. This in turn means less back and forth between development and QA/security on an issue.”
 
 ### Less homegrown tool development/open source solution management
 
-DevOps teams often spend a considerable amount of time creating tools they need from scratch or finding and managing open source options. GitLab reduces [toolchain complexity (a.k.a. debt)](http://about.gitlab.com/blog/2022/06/21/battling-toolchain-technical-debt/) by building into the platform the tools and features developers need, enabling them to manage their environment as a single application. GitLab Ultimate enabled the Forrester study’s composite organization to shift “from manually intensive tasks requiring the full attention of the developer, security, and operations teams to an environment where they now spend no more than a few hours per day per person on the same tasks.”
+DevOps teams often spend a considerable amount of time creating tools they need from scratch or finding and managing open source options. GitLab reduces [toolchain complexity (a.k.a. debt)](/blog/2022/06/21/battling-toolchain-technical-debt/) by building into the platform the tools and features developers need, enabling them to manage their environment as a single application. GitLab Ultimate enabled the Forrester study’s composite organization to shift “from manually intensive tasks requiring the full attention of the developer, security, and operations teams to an environment where they now spend no more than a few hours per day per person on the same tasks.”
 
 ### Efficient development
 
@@ -78,7 +70,5 @@ While DevOps platform benefits are applicable to any economic environment, they 
 > Download the full [Forrester Consulting “Total Economic Impact of GitLab’s Ultimate Plan” study](https://page.gitlab.com/resources-study-forrester-tei-gitlab-ultimate.html) for:
 
 * Additional benefits of GitLab Ultimate Plan
-
 * Testimonials from GitLab customers Forrester interviewed
-
 * Assumptions and risks to calculate ROI
