--- a/sites/uncategorized/source/blog/blog-posts/2022-10-24-why-the-market-is-moving-to-a-platform-approach-to-devsecops.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-10-24-why-the-market-is-moving-to-a-platform-approach-to-devsecops.html.md.erb
@@ -6,8 +6,8 @@ description: A single DevOps platform improves ROI, the developer experience,
   and customer retention and satisfaction.
 image_title: /images/blogimages/cobolshortage.jpg
 twitter_text: "GitLab's platform has the features and benefits organizations
-  need to endure a recession and beyond. Download Forrester Consulting's "Total
-  Economic Impact of GitLab's Ultimate Plan" study today to learn more."
+  need to endure a recession and beyond. Download Forrester Consulting's 'Total
+  Economic Impact of GitLab's Ultimate Plan' study today to learn more."
 ---
 The market is moving to a platform approach to [DevSecOps](/topics/devsecops/). What had previously been an approach that let different engineering teams adopt their own tools for different stages of the software development lifecycle – what we call “DIY DevOps” – is being replaced by an approach that leverages a single application.
 
