--- a/sites/uncategorized/source/blog/blog-posts/2022-10-24-why-the-market-is-moving-to-a-platform-approach-to-devsecops.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-10-24-why-the-market-is-moving-to-a-platform-approach-to-devsecops.html.md.erb
@@ -9,7 +9,8 @@ twitter_text: "GitLab's platform has the features and benefits organizations
   need to endure a recession and beyond. Download Forrester Consulting's 'Total
   Economic Impact of GitLab's Ultimate Plan' study today to learn more."
 ---
-The market is moving to a platform approach to [DevSecOps](/topics/devsecops/). What had previously been an approach that let different engineering teams adopt their own tools for different stages of the software development lifecycle – what we call “DIY DevOps” – is being replaced by an approach that leverages a single application.
+
+The market is moving to a platform approach to [DevSecOps](/topics/devsecops/). What had previously been a process that let different engineering teams adopt their own tools for different stages of the software development lifecycle – what we call “DIY DevOps” – is being replaced by a method that leverages a single application.
 
 Why is this happening? First, IT managers are coming to grips with the inefficiencies and cost of toolchain sprawl. Second, executives are relying on digital transformation to solve significant business-level problems: improving developer onboarding and productivity, building high-performing teams, securing the software supply chain, and creating a secure on-ramp to the public cloud. Finally, there’s the impact of [the potential recession](https://www.worldbank.org/en/news/press-release/2022/09/15/risk-of-global-recession-in-2023-rises-amid-simultaneous-rate-hikes), which has accelerated the above trends.
 
@@ -37,7 +38,7 @@ All of these pain points can impede an organization’s ability to manage throug
 
 ## The benefits of a DevOps platform
 
-The Forrester study found that GitLab Ultimate provided a composite organization, based on interviewed customers, 10 key quantified benefits over a three-year period While each benefit on its own could have a positive impact on a business’s ability to stay steady and even thrive during difficult economic times, together they are a powerhouse that can eliminate many pain points.
+The Forrester study found that GitLab Ultimate provided a composite organization, based on interviewed customers, 10 key quantified benefits over a three-year period. While each benefit on its own could have a positive impact on a business’s ability to stay steady and even thrive during difficult economic times, together they are a powerhouse that can eliminate many pain points.
 
 Here are five of those benefits of the GitLab Ultimate Plan:
 
@@ -63,7 +64,7 @@ Poor code quality directly affects a company’s ability to attract and retain c
 
 Organizations want to be able to address customer needs for newer applications, updates, and enhanced feature sets in a timely fashion. With GitLab, the composite organization can “increase the velocity of updates and releases, allowing it to meet customers’ rising digital demands.”
 
-DevOps brought about the following unquantified benefits for the composite organization, according to the Forrester study: more satisfied employees because they are more productive and collaborative; more satisfied customers because of a smoother project workflow and improved release quality and a faster release frequency; and improved market innovation and competitiveness due to faster development lifecycle and time to market.
+DevOps brought about the following unquantified benefits for the composite organization, according to the Forrester study: more satisfied employees because they are more productive and collaborative; more satisfied customers because of a smoother project workflow, improved release quality, and a faster release frequency; and improved market innovation and competitiveness due to faster development lifecycle and time to market.
 
 While DevOps platform benefits are applicable to any economic environment, they are even more so in this time of economic uncertainty. GitLab enables organizations to extract the most out of their DevOps environment and achieve faster, higher quality, and more secure development and release cycles.
 
