--- a/sites/handbook/source/handbook/engineering/development/ops/package/package-registry/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/ops/package/package-registry/index.html.md.erb
@@ -9,7 +9,7 @@ title: Package:Package Registry Group
 - TOC
 {:toc .hidden-md .hidden-lg}
 
-## The Team
+## 📦 The Team
 
 The Package Registry is part of the GitLab [Package
 stage](/handbook/engineering/development/ops/package/), which integrates with [GitLab's CI/CD product](/direction/ops/).
